few changes on index and css.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
     <head>
         <meta charset=”utf-8”>
         <title>Trabalho B - CG@IST/UL</title>
-        <style>
-            body {
-                margin: 0px;
-                background-color: #fff;
-                overflow: hidden;
-            }
-        </style>
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/three.js"></script>
         <script src="js/robot.js"></script>
     </head>
