--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
         <meta charset=”utf-8”>
         <title>Trabalho B - CG@IST/UL</title>
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/three.js"></script>
-        <script src="js/robot.js"></script>
+        <script src="js/three.min.js"></script> <!-- three.min.js version 0.140.2 -->
+        <script src="js/dat.gui.js"></script>
+        <script src="js/Stats.js"></script>
+        <script src="js/OrbitControls.js"></script>
+        <script src="js/VRButton.js"></script>
+        <script src="js/main-script.js"></script> 
     </head>
-    <body>      
+    <body>
+        <h2>Trabalho B</h2>
+        <p>Eduardo Lobo (ist199213) - 5 horas </p>
+        <p>Inês Ji (ist99238) - 5 horas </p>
+        <p>Raquel Cardoso (ist199314) - 5 horas </p>   
         <script>
             init();
             animate();
