--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
         <script src="js/Stats.js"></script>
         <script src="js/OrbitControls.js"></script>
         <script src="js/VRButton.js"></script>
-        <script src="js/main-script.js"></script> 
+        <script src="js/workC.js"></script> 
     </head>
     <body>
-        <h2>Trabalho B</h2>
-        <p>Eduardo Lobo (ist199213) - 11 horas </p>
-        <p>Inês Ji (ist199238) - 11 horas </p>
-        <p>Raquel Cardoso (ist199314) - 11 horas </p>   
         <script>
             init();
             animate();
