--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=”utf-8”>
-        <title>Trabalho B - CG@IST/UL</title>
+        <title>Trabalho C - CG@IST/UL</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/three.min.js"></script> <!-- three.min.js version 0.140.2 -->
         <script src="js/dat.gui.js"></script>
@@ -12,6 +12,10 @@
         <script src="js/workC.js"></script> 
     </head>
     <body>
+        <h2>Trabalho C</h2>
+        <p>Eduardo Lobo (ist199213) - 16 horas </p>
+        <p>Inês Ji (ist199238) - 16 horas </p>
+        <p>Raquel Cardoso (ist199314) - 16 horas </p>   
         <script>
             init();
             animate();
